# vgmp

./: .gitmodules  BUGS-2026-07-15.md  NEXT_STEPS-2026-07-15.md  README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  vgmplayer_jni.cpp
app/src/main/java/org/vlessert/vgmp/: MainActivity.kt  VgmApplication.kt
app/src/main/java/org/vlessert/vgmp/engine/: VgmEngine.kt
app/src/main/java/org/vlessert/vgmp/playback/: ArtworkLoader.kt  ArtworkRef.kt  ArtworkResolver.kt  NaturalSort.kt  PlaybackQueue.kt  QueueStateStore.kt  SevenZArchiveStore.kt  SupportedFormats.kt  TrackRef.kt  ZipArchiveStore.kt
app/src/main/java/org/vlessert/vgmp/playlists/: PlaylistExporter.kt  PlaylistStore.kt
app/src/main/java/org/vlessert/vgmp/service/: VgmPlaybackService.kt
app/src/main/java/org/vlessert/vgmp/settings/: SettingsManager.kt
app/src/main/java/org/vlessert/vgmp/ui/: BrowserFragment.kt  DownloadDialogFragment.kt  FrameDrivenVisualizerView.kt  InsetAwareDialogFragment.kt  KaleidoscopeView.kt  LibraryFragment.kt  NowPlayingFragment.kt  PlaylistsFragment.kt  SettingsDialogFragment.kt  SnesMusicWebViewFragment.kt  SpectrumBarsView.kt  SpectrumScale.kt  TrackContextMenu.kt  VgmRipsSearchFragment.kt  VisualizerRefreshRate.kt
app/src/main/res/drawable/: ic_folder.xml  ic_playlist.xml
app/src/main/res/layout/: activity_main.xml  fragment_browser.xml  fragment_now_playing.xml  fragment_playlists.xml  fragment_settings.xml  layout_mini_player.xml
app/src/main/res/menu/: menu_bottom_navigation.xml  menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/vlessert/vgmp/playback/: NaturalSortTest.kt  PlaybackQueueTest.kt  SupportedFormatsTest.kt  ZipArchiveStoreTest.kt
app/src/test/java/org/vlessert/vgmp/playlists/: PlaylistExporterTest.kt
app/src/test/java/org/vlessert/vgmp/settings/: VgmTimingTest.kt
app/src/test/java/org/vlessert/vgmp/ui/: BrowserNavigationTest.kt  SpectrumScaleTest.kt  VisualizerRefreshRateTest.kt
gradle/: libs.versions.toml
